--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: "mgenrich: the best man for the worst times"
+description: "Here are some more words that the Web really doesn't need"
